--- a/fase_2/design.html
+++ b/fase_2/design.html
@@ -59,7 +59,7 @@
                     Etiquetas Semánticas<br> Las etiquetas semánticas ayudan a definir la estructura del documento y permiten que las páginas web sean mejor indexadas por los buscadores.
                 Una etiqueta se califica como semántica si tiene que ver el significado, es decir, si nos informa sobre lo que trata su contenido. Por ejemplo, la etiqueta SECTION nos dice que contiene una sección o capítulo dentro de la página. Frente a las etiquetas semánticas tenemos otros tipos de etiquetas como las que afectan al formato, como UL, a multimedia, como VIDEO, etc.
                 El esquema de una página con etiquetas semánticas podría ser el siguiente. Aula click (2021) https://www.aulaclic.es/articulos/html5-semantica_1.html</p>
-                <center><img src="estructura.jpg" style="width: 300px;"></center><br>
+                <center><img src="img1/estructura.jpg" style="width: 300px;"></center><br>
 
                 <p>Listas:<br>  Una lista es un párrafo que contiene una secuencia de artículos estructurados. HTML define tres tipos de listas: la lista ordenada, la lista no ordenada y la lista de definiciones. Carlos villagomez (enero 2018) Listas en HTML, https://es.ccm.net/contents/242-listas-en-html</p>
                 
@@ -72,7 +72,7 @@
             </article>
             <br>
             <br>
-            <center><img src="mockup_fase2.png" style="width: 400px;"></center><br>
+            <center><img src="mockup/mockup_fase2.png" style="width: 400px;"></center><br>
             <p><center><b>imagen de Mockups como bosquejo para el cliente</b></center></p>
                    
         </div>
