--- a/fase_2/design.html
+++ b/fase_2/design.html
@@ -2,6 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="x-UA-compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etiquetas semanticas, listas, Enlaces</title>
     
     
