--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h3><center> Fecha:  04/02/2021
         <br>
         <br>
-        <a href="https://luyisfer.github.io/DWSFernandoHernandez/Fase_2/design.html"> Enlace con la pagina design.html</a></center><br>
+        <a href="Fase_2/design.html"> Enlace con la pagina design.html</a></center><br>
     
     </h3>
     <br>
