--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h3><center> Fecha:  04/02/2021
         <br>
         <br>
-        <un href="Fase_2/design.html"> Enlace con la pagina design.html</una></center><br>
+        <Un href="Fase_2 / design.html"> Enlace con la pagina design.html</Una></center><br>
     
     </h3>
     <br>
