--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h3><center> Fecha:  04/02/2021
         <br>
         <br>
-        <Un href="Fase_2 / design.html"> Enlace con la pagina design.html</Una></center><br>
+        <H4 > <un  href = " Fase2 / design.html " > Diseño y Construcción </una > </h4 >
     
     </h3>
     <br>
