--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <h3><center> Fecha:  04/02/2021
         <br>
         <br>
-        <H4 > <un  href = " Fase2 / design.html " > Diseño y Construcción </una > </h4 >
+        <a href="Fase_2\design.html"> Enlace con la pagina design.html</a>
+        <br>
     
     </h3>
     <br>
