--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     <font size=”3″ face=”Comic Sans MS, Arial, MS Sans Serif”></font>
     <h3><center> Estudiante: FERNANDO HERNANDEZ RAMIREZ</center>
     <h3><center> Programa: DISEÑO DE SITIOS WEB</center>
-    <h3><center> Fecha:  04/02/2021
+    <h3><center> Fecha:  04/02/2021</h3>
+       <h4
         <br>
         <br>
-        <a href="Fase_2\design.html"> Enlace con la pagina design.html</a>
+        <un href="Fase_2\design.html"> Enlace con la pagina design.html</un>
         <br>
+       </h4
     
-    </h3>
     <br>
     <br>
     <p align="center">correo electronico: luyisfer01@hotmail.com, celular 3132659342,
