--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        <h4
         <br>
         <br>
-        <a href="fase_2\design.html"> Enlace con la pagina design.html</a>
+        <a href="fase_2\design.html"> Enlace con la pagina design.html</a><center></center>
         <br>
        </h4
     
