--- a/fase_2/design.html
+++ b/fase_2/design.html
@@ -72,11 +72,12 @@
                ejemplo<a> a> href="URI">Contenido del enlace/a>"</p>
      
             </article>
+            <h3>
             <br>
             <br>
-            <center><img src="img2/mockup_fase2.jpg" alt="imagen de Mockups como bosquejo para el cliente"></center><br>
+            <center><img src="img2/mockup_fase2.jpg" style="width: 300px;"></center><br>
             <p><center><b>imagen de Mockups como bosquejo para el cliente</b></center></p>
-                   
+            </h3>      
         </div>
     </main>
 <footer class="footer">
