--- a/fase_2/design.html
+++ b/fase_2/design.html
@@ -71,11 +71,11 @@
                 Pero solo con esto el enlace no tendrá mucha utilidad ya que el principal objetivo del enlace es enlazar a un destino. Para poder indicar el destino de un enlace utilizamos el [atributo href][Href]. En valor del [atributo href][Href] puede ser cualquier URI que represente un recurso. Es decir, una página, una parte de una página, una URL genérica, un archivo,… De esta forma el enlace en HTML lo crearemos con la sintaxis:
                ejemplo<a> a> href="URI">Contenido del enlace/a>"</p>
      
-            </article>
-            <br>
-            <br>
-            <center><img src="img2/mockup_fase2.jpg" style="width: 300px;"></center><br>
-            <p><center><b>imagen de Mockups como bosquejo para el cliente</b></center></p>
+               </article>
+               <br>
+               <br>
+               <center><img src="mockup_fase2.jpg" style="width: 400px;"></center><br>
+               <p><center><b>imagen de Mockups como bosquejo para el cliente</b></center></p>
                   
         </div>
     </main>
