--- a/fase_2/design.html
+++ b/fase_2/design.html
@@ -74,7 +74,7 @@
                </article>
                <br>
                <br>
-               <center><img src="img2/mockup_fase2.png" style="width: 300px;"></center><br>
+               <center><img src="img2/mockup_fase2.png" style="height:300px;width:400px;">;"></center><br>
                <p><center><b>imagen de Mockups como bosquejo para el cliente</b></center></p>
                   
         </div>
