--- a/fase_2/design.html
+++ b/fase_2/design.html
@@ -74,7 +74,9 @@
                </article>
                <br>
                <br>
-               <center><img src="img2/mockup_fase2.png" style="height:300px;width:400px;">;"></center><br>
+               <h3> Mockup Para el Cliente </h3>
+               <br>
+               <center> <img  src = "img2/mockup_fase2.png" style = "width: 400px;"></center><br>
                <p><center><b>imagen de Mockups como bosquejo para el cliente</b></center></p>
                   
         </div>
