--- a/fase_2/design.html
+++ b/fase_2/design.html
@@ -74,20 +74,24 @@
                </article>
                <br>
                <br>
+               <center>
                <h3> Mockup Para el Cliente </h3>
                <br>
-               <center> <img  src = "img2/mockup_fase2.png" style = "width: 400px;"></center><br>
-               <p><center><b>imagen de Mockups como bosquejo para el cliente</b></center></p>
-                  
+               <img  src = "img2/mockup_fase2.png" style = "width: 400px;"></center><br>
+               </center>   
+               <p><center><b>imagen de Mockups como bosquejo para el cliente</b></p>
+               </center>   
         </div>
     </main>
 <footer class="footer">
     <div class="container">
         <br>
+        <center>
         <p>pagina diseñada por Fernando Hernandez,
            correo electronico: luyisfer01@hotmail.com,
            skype:  luyisfer01@hotmail.com<br>
            pagina actualizada ( 18/02/2021 )</p>
+               </center>
      </div>
 </footer>
      
