--- a/fase_2/design.html
+++ b/fase_2/design.html
@@ -77,7 +77,7 @@
                <center>
                <h3> Mockup Para el Cliente </h3>
                <br>
-               <img  src = "Fase_2/img2/Mockup_fase2.png" style = "width: 100px;"></center>
+               <img  src = "img2/mockup_fase2.png" style = "width: 300px;"></center>
                </center>   
                <p><center><b>imagen de Mockups como bosquejo para el cliente</b></p>
                </center>   
