--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        <h4
         <br>
         <br>
-        <center><a href="fase_2\design.html"> Enlace con la pagina design.html</a></center>
+        <center><a href="fase_3\index.html"> Enlace con la pagina index.html Fase_3</a></center>
         <br>
        </h4
     
