--- a/fase_3/index.html
+++ b/fase_3/index.html
@@ -22,7 +22,7 @@
                     <li><a href="fase_3/../index.html">Inicio</a></li>                              
                     <li><a href="">Temas:</a>
                         <ul> 
-                           <li><a href="fase_3/tema_1.html">tema 1</a></li> 
+                           <li><a href="tema_1.html">tema 1</a></li> 
                            <li><a href="">tema 2</a></li>
                         </ul>
                     <li><a href="">Recursos Digitales</a>
@@ -33,8 +33,8 @@
                         </ul>
                     <li><a href="">Aprendizaje</a>
                         <ul>
-                            <li><a href="">Actividad 1</a></li> 
-                            <li><a href="">Actividad 2</a></li>
+                            <li><a href="etiq_semant_1.png">Actividad 1</a></li> 
+                            <li><a href="etiq_semant_2.jpg">Actividad 2</a></li>
                         </ul>
                    <li><a href="">Autor</a>
                         <ul>
