--- a/fase_3/tema_1.html
+++ b/fase_3/tema_1.html
@@ -47,7 +47,19 @@
                         </p>
                     </div>
                 </aside>
+                <div class="Ejemplos">
+                  Another Post
+                </div>
+                <div class="Ejemplos">
+                    Another Post
+                  </div>
+
             </div>
+            <footer class="Creador">
+                <h4>Realizado Por:</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, mollitia possimus quidem impedit quod numquam laborum nesciunt animi? Modi ut hic ex ad dolores pariatur beatae sed corporis fugit error?</p>
+
+            </footer>
             
             <body bgcolor=”#DAFCF5”></body>
         </body>
