--- a/fase_3/tema_1.html
+++ b/fase_3/tema_1.html
@@ -34,12 +34,12 @@
                             </ul>
                         <li><a href="">Aprendizaje</a>
                             <ul>
-                                <li><a href="etiq_semant_1.png">Actividad 1</a></li> 
-                                <li><a href="etiq_semant_2.jpg">Actividad 2</a></li>
+                                <li><a href="">Actividad 1</a></li> 
+                                <li><a href="">Actividad 2</a></li>
                             </ul>
-                       <li><a href="">Autor</a>
+                       <li><a href="">Acerca de</a>
                             <ul>
-                                <li><a href="">Bibliografia</a></li>
+                                <li><a href="acerca_de.html">Acerca del autor</a></li>
                             </ul>
                     </ul>
                 </div>  
