--- a/fase_3/acerca_de.html
+++ b/fase_3/acerca_de.html
@@ -29,7 +29,7 @@
                         <li><a href="">Recursos Digitales</a>
                              <ul>
                       
-                                <li><a href="">Recurso 1</a></li> 
+                                <li><a href="recurso_1.html">Recurso 1</a></li> 
                                 <li><a href="">Recurso 2</a></li>
                             </ul>
                         <li><a href="">Aprendizaje</a>
