--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
        <h4
         <br>
         <br>
+        <center><a href="fase_2/design.html"> Enlace con la pagina desing.html Fase_2</a></center>
+        <br>
+        <br>
         <center><a href="fase_3\index.html"> Enlace con la pagina index.html Fase_3</a></center>
         <br>
        </h4
