--- a/fase_3/tema_2.html
+++ b/fase_3/tema_2.html
@@ -13,7 +13,7 @@
         <body>   
             <main>
                 <header>           
-                    <a href="img3/HTML5.jpg" class="logo">Diseños Web LFHR Fase_3</a><br>
+                    <a href="img3/HTML5.jpg" class="logo">Diseños Web LFHR</a><br>
             
                     <br>
                     <h1><center>Diseño y Construcción de Un Sitio Web con Etiquetas Semanticas, Listas y Enlaces </center></h1><br>
