--- a/fase_3/acerca_de.html
+++ b/fase_3/acerca_de.html
@@ -32,7 +32,7 @@
                          <ul>
                   
                             <li><a href="recurso_1.html">Recurso 1</a></li> 
-                            <li><a href="">Recurso 2</a></li>
+                            <li><a href="recurso_2.html">Recurso 2</a></li>
                         </ul>
                         <li><a href="">Aprendizaje</a>
                         <ul>
