--- a/fase_3/index.html
+++ b/fase_3/index.html
@@ -13,7 +13,7 @@
         <body>   
             <main>
                 <header>           
-                    <a href="img3/HTML5.jpg" class="logo">Diseños Web LFHR</a><br>
+                    <a href="img3/HTML5.jpg" class="logo">  Diseños Web LFHR</a><br>
             
                     <br>
                     <h1><center>Diseño y Construcción de Un Sitio Web con Etiquetas Semanticas, Listas y Enlaces </center></h1><br>
@@ -32,7 +32,7 @@
                          <ul>
                   
                             <li><a href="recurso_1.html">Recurso 1</a></li> 
-                            <li><a href="">Recurso 2</a></li>
+                            <li><a href="recurso_2.html">Recurso 2</a></li>
                         </ul>
                         <li><a href="">Aprendizaje</a>
                         <ul>
