--- a/fase_3/index.html
+++ b/fase_3/index.html
@@ -16,7 +16,7 @@
                     <a href="img3/HTML5.jpg" class="logo">  Diseños Web LFHR</a><br>
             
                     <br>
-                    <h1><center>Diseño y Construcción de Un Sitio Web con Etiquetas Semanticas, Listas y Enlaces </center></h1><br>
+                    <h1><center>Diseño y Construcción de Un Sitio Web con Etiquetas Semánticas, Listas y Enlaces </center></h1><br>
                 </header>
 
             <div id="menu">
@@ -66,7 +66,7 @@
                 </article>
 
                 <article>
-                    <h2> Informaión de Etiqutas semanticas, listas y Enlaces</h2>
+                    <h2> Informaión de Etiqutas semánticas, listas y Enlaces</h2>
 
                     <p><font size="4px">
                       Los contenidos y etiquetas que a continuacion describiremos son algunas de las herramientas utilizadas en la fase2  
@@ -98,7 +98,7 @@
             </section> 
                
                <aside>
-                <h2><center> imagen de etiquetas semanticas</center></h2>
+                <h2><center> imagen de etiquetas semánticas</center></h2>
                     <center><img src="img1/estructura.jpg" style=width: 20px;"></center>
 
                     <h2><center> Mockup Para el Cliente</center></h2>
