--- a/fase_3/recurso_2.html
+++ b/fase_3/recurso_2.html
@@ -56,11 +56,11 @@
                 <article>
                     
                                 <center><h1><b>Video de Etiquetas Semánticas</b></h1>
-                                <p><iframe width="400" height="215" src="https://www.youtube.com/embed/xbXvSk_uQvE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>                                                                      
+                                <p><iframe width="400" height="200" src="https://www.youtube.com/embed/lJn1zsbtAzM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>></p>                                                                      
                                 </p>
 
                                 <br><h1><b>Video de Listas y Enlaces</b></h1>
-                                <p><iframe width="400" height="215" src="https://www.youtube.com/embed/YP_8cAswHHI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>                                                                      
+                                <p><iframe width="400" height="200" src="https://www.youtube.com/embed/YP_8cAswHHI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>                                                                      
                                 </p></center>
                        
                 </article>
