--- a/fase_4/recurso_2.html
+++ b/fase_4/recurso_2.html
@@ -36,8 +36,8 @@
                         </ul>
                         <li><a href="">Aprendizaje</a>
                         <ul>
-                            <li><a href="">Actividad 1</a></li> 
-                            <li><a href="">Actividad 2</a></li>
+                            <li><a href="actividad_1.html">Actividad 1</a></li> 
+                            <li><a href="actividad_2.html">Actividad 2</a></li>
                         </ul>
                         <li><a href="">Acerca de</a>
                         <ul>
