--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <br>
         <center><a href="fase_3\index.html"> Enlace con la pagina index.html Fase_3</a></center>
         <br>
+        <br>
+        <center><a href="fase_4\index.html"> Enlace con la pagina index.html Fase_4</a></center>
+        <br>
        </h4
     
     <br>
