--- a/fase_4/actividad_1.html
+++ b/fase_4/actividad_1.html
@@ -20,8 +20,8 @@
         <body>   
             <main class="container">
 
-                <div class="dropdown ">
-                    <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuBoton">
+                <div class="dropdown">
+                    <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuBoton"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                         botón desplegar
                     </button> 
