--- a/fase_4/recurso_1.html
+++ b/fase_4/recurso_1.html
@@ -23,7 +23,7 @@
                 
                     <ul>
                         <li><a href="fase_3/../index.html">Inicio</a></li>                              
-                        <li><a href="">Temas:</a>
+                        <li><a href="">Temas</a>
                         <ul> 
                            <li><a href="tema_1.html">tema 1</a></li> 
                            <li><a href="tema_2.html">tema 2</a></li>
