--- a/fase_4/index.html
+++ b/fase_4/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge"
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/main1.css">
+        <link rel="stylesheet" href="css/main1.css">
         <meta charset="UTF-8">   
 
          <style type="text/css"></style>
