--- a/fase_4/actividad_1.html
+++ b/fase_4/actividad_1.html
@@ -85,7 +85,7 @@
             </form>
           </div>
         </div>
-      </nav>
+      </nav><br>
 
     <main class="container">
         <div class="row">
