--- a/fase_4/actividad_1.html
+++ b/fase_4/actividad_1.html
@@ -25,7 +25,7 @@
             <center>Diseño y Construcción de Un Sitio Web con Etiquetas Semánticas, Listas y Enlaces </center>
         </h1>
 
-    </header><br>
+    </header>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
