--- a/fase_4/actividad_1.html
+++ b/fase_4/actividad_1.html
@@ -18,11 +18,14 @@
 <body>
     <header>
       
-        <a href="img3/HTML5.jpg" class="logo">Diseños Web LFHR</a><br>
+        <a href="img3/HTML5.jpg" class="logo">Diseños Web LFHR</a>
 
         <br>
         <h1>
-            <center>Diseño y Construcción de Un Sitio Web con Etiquetas Semánticas, Listas y Enlaces </center>
+          <!-– Mejoramiento del SEO en palabras claves como sitio web, etiqutas semanticas, listas , enlaces en html 
+                mejoramiento en el SEO en el fortalecimiento del contenido de textos y títulos-->
+
+            <center>Diseño y Construcción de Sitios Web con Etiquetas Semánticas, Listas y Enlaces en Html </center>
         </h1>
 
     </header>
@@ -103,25 +106,25 @@
                 </article>
             </section>
             <aside class="col-md-6">
-                <h2>
-                    <center> Imagen_1 de Bootstrap</center>
-                </h2><br>
+                <h3>
+                    <center> Imagen Logo de Bootstrap</center>
+                </h3><br>
                 <center><img src="imag_bootstrap_1.png" style=width: 20px;"></center>
                 <p>
                     <center><b>Mira como hacerlo.com (2021) Que es y para que sirve boostrap</b></center>
                 </p>
 
                 <br>
-                <h2>
-                    <center> Imagen_2 de bootstrap</center>
-                </h2><br>
+                <h3>
+                    <center> Imagen código con bootstrap</center>
+                </h3><br>
                 <center><img src="imag_bootstrap_2.png" style=width: 20px; alt="imagen Código de Bootstrap"></center>
 
                 <p>
                     <center><b>Alexander Guevara Benites, (2017-2018) Devcode.la, Que es bootstrap</b></center>
                 </p><br>
             </p>
-            <h1>Red Social Facebook UNAD</h1>
+            <h3>Red Social Facebook UNAD</h3>
             <center><iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe></center><p>
                 <center>timeline pagina de la UNAD</center>
                                              
