--- a/fase_3/index.html
+++ b/fase_3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>trabajo Fase_3 en html5</title><br>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge"
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/main1.css">
         <meta charset="UTF-8">   
