--- a/fase_4/index.html
+++ b/fase_4/index.html
@@ -4,6 +4,7 @@
         <title>trabajo Fase_3 en html5</title><br>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name=”robots” content=”noindex, nofollow”>
         <link rel="stylesheet" href="css/main1.css">
         <link rel="stylesheet" href="css/main1.css">
         <meta charset="UTF-8">   
