--- a/fase_4/index.html
+++ b/fase_4/index.html
@@ -8,9 +8,12 @@
         <link rel="stylesheet" href="css/main1.css">
         <link rel="stylesheet" href="css/main1.css">
         <meta charset="UTF-8">   
-
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://font.googleapis.com/css2?family=Manjari:wght@100&display=swap" rel="stylesheet">
          <style type="text/css"></style>
-
+        <title>HTML</title>
+        <meta name="descripcion" content="diseño con etiquetas semanticas, listas y lenlaces">
+        <meta name="Keywords" content="HTML, diseño paginas web con etiquetas semanticas, listas y lenlaces">
     </head> 
         <body>   
             <main>
